--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "drf-api"
+name = "drf-auth"
 version = "0.1.0"
 description = ""
 authors = ["Ibrahim Bader <ebraheem1996@hotmail.com>"]
@@ -10,6 +10,9 @@ Django = "^4.0"
 djangorestframework = "^3.12.4"
 pytz = "^2021.3"
 psycopg2-binary = "^2.9.2"
+djangorestframework-simplejwt = "^5.0.0"
+gunicorn = "^20.1.0"
+whitenoise = "^5.3.0"
 
 [tool.poetry.dev-dependencies]
 
